# lmdeploy

examples/cpp/llama/: llama_triton_example.cc  start_ids.csv
src/turbomind/kernels/: CMakeLists.txt  (+1 more)
src/turbomind/kernels/attention/: CMakeLists.txt  arch.h  array_ops.h  attention.cu  attention.h  attention_128_f16_sm80.cu  attention_config.h  attention_params.h  attention_template.h  attention_universal.h  cta_map.h  decoding.cu  decoding_128_f16_sm70.cu  decoding_128_f16_sm80.cu  decoding_config.h  decoding_simt.h  decoding_template.h  impl.h  impl_m16n8.h  impl_simt.h  impl_sm70.h  impl_sm75.h  impl_sm80.h  iterator.h  iterator_simt.h  iterator_sm70.h  iterator_sm75.h  iterator_sm80.h  kv_cache.cu  kv_cache_utils.cu  kv_cache_utils.h  mainloop.h  mainloop_sm70.h  mainloop_sm80.h  mainloop_sm80_multistage.h  policy.h  policy_sm70.h  policy_sm80.h  quantization.h  reference.cu  (+5 more)
src/turbomind/kernels/attention/codegen/: decoding_sm80_128_bf16_bf16.cu  decoding_sm80_128_bf16_u4.cu  decoding_sm80_128_bf16_u8.cu  decoding_sm80_128_f16_f16.cu  decoding_sm80_128_f16_u4.cu  decoding_sm80_128_f16_u8.cu
src/turbomind/kernels/gemm/: CMakeLists.txt  convert_v2.cu  convert_v2.h  desc.h  gemm_sm80.cu  gemm_streamk.cu  mainloop_sm90.h  registry.cu  registry.h  smem_copy.h  test_gemm_sm80.cu  types.h
src/turbomind/kernels/gemm/arch/: config_sm90_s64n16.h  mma_sm90.h  operand_sm80_s16816.h  operand_sm90_s64n16.h  smem_copy_simt.h  smem_copy_sm70.h  smem_copy_sm80.h
src/turbomind/kernels/gemm/kernel/: f16_u4g128_f16_sm90a_s64n16.cu  u4g128_f16_f16_nnn_sm80_s16816.cu
(+30 files in other folders)
